# claude-copilot

./: .gitignore  .mcp.json  ACKNOWLEDGEMENTS.md  BENCH-2-WORK-PRODUCT.md  BENCH-3-BASELINE-MEASUREMENTS.md  BENCH-3-SUMMARY.md  BENCH-4-FRAMEWORK-MEASUREMENTS.md  BENCH-4-SUMMARY.md  BENCH-5-CONTEXT-EFFICIENCY-AUDIT-REPORT.md  BENCH-5-SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_REFERENCE.md  CODE_REVIEW_OVERVIEW.md  CONTRIBUTING.md  KEYWORD_UPDATES_V2.8.md  LICENSE  README.md  SETUP.md  SKILLS-ROLLOUT.md  SOUL.md  STREAM-E-IMPLEMENTATION-SUMMARY.md  TASK-RW-008-implementation.md  TASK-RW-010-COMPLETE.md  TASK-RW-010-STOP-HOOKS.md  TASK-RW-016-iteration-performance-tracking.md  VERSION.json  conftest.py  coverage.xml  package.json  pyproject.toml  pytest.ini
tools/cc/: .gitignore  COMMANDS.md  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
tools/cc/tests/: __init__.py  conftest.py  test_api.py  test_api_docs.py  test_auth_contract.py  test_authstore.py  test_backend_fetch.py  test_backend_local.py  test_component_status.py  test_config_commands.py  test_config_load.py  test_config_merge.py  test_config_sentinels.py  test_deprovision_contract.py  test_docs_cache.py  test_docs_cli.py  test_docs_config.py  test_docs_resolver.py  test_doctor.py  test_doctor_contract.py  test_ecosystem_config.py  test_ecosystem_discovery.py  test_ecosystem_freshness.py  test_ecosystem_lockfile.py  test_ecosystem_manifest.py  test_ecosystem_materialize.py  test_ecosystem_mirror.py  test_ecosystem_policy.py  test_ecosystem_resolver.py  (+28 more)
tools/tc/: README.md  pyproject.toml
(+680 files in other folders)
