[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-copilot-cli"
version = "1.0.0"
description = "Agent-agnostic CLI for AI task management"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
tc = "tc.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--tb=short", "--color=yes", "--override-ini=addopts="]

[tool.coverage.run]
source = ["src/tc"]

[tool.coverage.report]
show_missing = true
